<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.tensorflow</groupId>
    <artifactId>spark-tensorflow-connector</artifactId>
    <packaging>jar</packaging>
    <version>1.0-SNAPSHOT</version>
    <name>spark-tensorflow-connector</name>
    <url>https://www.tensorflow.org</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <scala.maven.version>3.2.2</scala.maven.version>
        <scala.binary.version>2.11</scala.binary.version>
        <scalatest.maven.version>1.0</scalatest.maven.version>
        <scala.test.version>2.2.6</scala.test.version>
        <maven.compiler.version>3.0</maven.compiler.version>
        <java.version>1.8</java.version>
        <spark.version>2.1.0</spark.version>
        <tensorflow.hadoop.version>1.0-06262017-SNAPSHOT</tensorflow.hadoop.version>
        <yarn.api.version>2.7.3</yarn.api.version>
        <protobuf.version>3.3.1</protobuf.version>
        <junit.version>4.11</junit.version>
    </properties>

    <repositories>
        <repository>
        <id>central1</id>
        <url>http://central1.maven.org/maven2</url>
        <releases>
            <enabled>true</enabled>
        </releases>
        <snapshots>
            <enabled>false</enabled>
        </snapshots>
        </repository>

        <repository>
            <id>tap</id>
            <url>https://tap.jfrog.io/tap/public</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <releases>
                <enabled>true</enabled>
            </releases>
        </repository>
        <repository>
            <id>tap-snapshots</id>
            <url>https://tap.jfrog.io/tap/public-snapshots</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
            <releases>
                <enabled>false</enabled>
            </releases>
        </repository>
    </repositories>

    <profiles>
        <profile>
            <id>compile</id>
            <activation>
                <activeByDefault>true</activeByDefault>
                <property>
                    <name>!NEVERSETME</name>
                </property>
            </activation>
            <build>
                <pluginManagement>
                    <plugins>
                        <!--START DO NOT TOUCH-->
                        <plugin>
                            <inherited>true</inherited>
                            <groupId>net.alchim31.maven</groupId>
                            <artifactId>scala-maven-plugin</artifactId>
                            <version>${scala.maven.version}</version>
                            <executions>
                                <execution>
                                    <id>compile</id>
                                    <goals>
                                        <goal>add-source</goal>
                                        <goal>compile</goal>
                                    </goals>
                                    <configuration>
                                        <jvmArgs>
                                            <jvmArg>-Xms256m</jvmArg>
                                            <jvmArg>-Xmx512m</jvmArg>
                                        </jvmArgs>
                                        <args>
                                            <arg>-g:vars</arg>
                                            <arg>-deprecation</arg>
                                            <arg>-feature</arg>
                                            <arg>-unchecked</arg>
                                            <arg>-Xfatal-warnings</arg>
                                            <arg>-language:implicitConversions</arg>
                                            <arg>-language:existentials</arg>
                                        </args>
                                    </configuration>
                                </execution>
                                <execution>
                                    <id>test</id>
                                    <goals>
                                        <goal>add-source</goal>
                                        <goal>testCompile</goal>
                                    </goals>
                                </execution>
                            </executions>
                            <configuration>
                                <recompileMode>incremental</recompileMode>
                                <useZincServer>true</useZincServer>
                                <scalaVersion>${scala.binary.version}</scalaVersion>
                                <checkMultipleScalaVersions>false</checkMultipleScalaVersions>
                            </configuration>
                        </plugin>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-dependency-plugin</artifactId>
                            <executions>
                                <execution>
                                    <id>copy-dependencies</id>
                                    <phase>process-resources</phase>
                                    <goals>
                                        <goal>copy-dependencies</goal>
                                    </goals>
                                    <configuration>
                                        <excludeScope>provided</excludeScope>
                                        <excludeTransitive>true</excludeTransitive>
                                        <excludeGroupIds>org.apache.spark,junit,org.scalatest</excludeGroupIds>
                                        <outputDirectory>${project.build.directory}/lib</outputDirectory>
                                    </configuration>
                                </execution>
                            </executions>
                        </plugin>
                        <!--END DO NOT TOUCH-->
                        <plugin>
                            <groupId>org.codehaus.mojo</groupId>
                            <artifactId>properties-maven-plugin</artifactId>
                            <version>1.0.0</version>
                            <executions>
                                <execution>
                                    <phase>generate-resources</phase>
                                    <goals>
                                        <goal>write-project-properties</goal>
                                    </goals>
                                    <configuration>
                                        <outputFile>${project.build.outputDirectory}/maven.properties</outputFile>
                                    </configuration>
                                </execution>
                            </executions>
                        </plugin>
                    </plugins>
                </pluginManagement>
                <plugins>
                    <plugin>
                        <groupId>net.alchim31.maven</groupId>
                        <artifactId>scala-maven-plugin</artifactId>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <profile>
            <id>test</id>
            <activation>
                <activeByDefault>true</activeByDefault>
                <property>
                    <name>!NEVERSETME</name>
                </property>
            </activation>
            <build>
                <pluginManagement>
                    <plugins>
                        <!--START DO NOT TOUCH-->
                        <plugin>
                            <inherited>true</inherited>
                            <groupId>net.alchim31.maven</groupId>
                            <artifactId>scala-maven-plugin</artifactId>
                            <version>${scala.maven.version}</version>
                            <executions>
                                <execution>
                                    <id>compile</id>
                                </execution>
                            </executions>
                        </plugin>
                        <plugin>
                            <inherited>true</inherited>
                            <groupId>org.scalatest</groupId>
                            <artifactId>scalatest-maven-plugin</artifactId>
                            <version>${scalatest.maven.version}</version>
                            <configuration>
                                <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
                                <junitxml>.</junitxml>
                                <filereports>WDF TestSuite.txt</filereports>
                                <parallel>false</parallel>
                                <stdout>FTD</stdout>
                                <argLine>-Xmx1024m -XX:PermSize=256m -XX:MaxDirectMemorySize=1000m</argLine>
                            </configuration>
                            <executions>
                                <execution>
                                    <id>scalaTest</id>
                                    <phase>test</phase>
                                    <goals>
                                        <goal>test</goal>
                                    </goals>
                                </execution>
                            </executions>
                        </plugin>
                        <!--END DO NOT TOUCH-->
                    </plugins>
                </pluginManagement>
                <plugins>
                    <plugin>
                        <groupId>net.alchim31.maven</groupId>
                        <artifactId>scala-maven-plugin</artifactId>
                    </plugin>
                </plugins>
            </build>
            <dependencyManagement>
                <dependencies>
                    <dependency>
                        <groupId>org.scalatest</groupId>
                        <artifactId>scalatest_${scala.binary.version}</artifactId>
                        <version>${scala.test.version}</version>
                        <scope>test</scope>
                    </dependency>
                </dependencies>
            </dependencyManagement>

            <dependencies>
                <dependency>
                    <groupId>org.scalatest</groupId>
                    <artifactId>scalatest_${scala.binary.version}</artifactId>
                    <scope>test</scope>
                </dependency>
            </dependencies>
        </profile>

    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>net.alchim31.maven</groupId>
                <artifactId>scala-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.scalatest</groupId>
                <artifactId>scalatest-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
        </plugins>

        <testResources>
            <testResource>
                <directory>core/src/main/resources</directory>
                <includes>
                    <include>reference.conf</include>
                </includes>
            </testResource>
            <testResource>
                <directory>core/src/test/resources</directory>
            </testResource>
        </testResources>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.tensorflow</groupId>
            <artifactId>tensorflow-hadoop</artifactId>
            <version>${tensorflow.hadoop.version}</version>
            <classifier>shaded-protobuf</classifier>
        </dependency>
        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-core_${scala.binary.version}</artifactId>
            <version>${spark.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-sql_${scala.binary.version}</artifactId>
            <version>${spark.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.hadoop</groupId>
            <artifactId>hadoop-yarn-api</artifactId>
            <version>${yarn.api.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-mllib_${scala.binary.version}</artifactId>
            <version>${spark.version}</version>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

</project>
